# dtensor

./: LICENSE  README.md  RELEASE_PROCESS.md  pyproject.toml  visualize_pytorch_dtensor_sharding_like_jax.py
.github/workflows/: publish.yml
dtensor/: visualize.py  visualize_example.py
visualize_dtensor/: example.py
visualize_pytorch_dtensor_sharding_like_jax/: visualize_pytorch_dtensor_sharding_like_jax.py
